# interactactwel-django-app

./: MANIFEST.in  README.md  setup.cfg  setup.py
interactwel/: package-lock.json  package.json  urls.py
interactwel/patches/: 0001-changes-done-to-boxplot-by-apex.js-but-still-having-.patch
interactwel/src/: canvasjs.min.js  main.js  router.js
interactwel/src/components/: CanvasJSVueComponent.vue
interactwel/src/components/dashboard/plans/: Feedback.vue  FeedbackSlider.vue  FeedbackView.vue  Plan.vue
interactwel/src/components/dashboard/projects/: AdaptationPlans.vue  AssignPlans.vue  ExploreProjects.vue  ProjectMap.vue  ProjectRequests.vue  ProjectUsers.vue  StressesMap.vue  SuggestedProjects.vue  Visualize.vue
interactwel/src/components/dashboard/projects/Menu/: Burger.vue  FloatingPane.vue  Sidebar.vue
interactwel/src/components/dashboard/projects/charts/: Feedback.vue  OldFeedbackView.vue  Region.vue  Streams.vue  SubBasins.vue
interactwel/src/components/dashboard/projects/intro/: ActionsGraphModal.vue  CustomRangeSliders.vue
interactwel/src/components/dashboard/projects/popup/: PopupContent_GaugeStations.vue  PopupContent_Reservoirs.vue  PopupContent_WStations.vue  RegionalSummary.vue
interactwel/src/components/dashboard/projects/visualize-map-sub-components/: ClimateScenarioSelectionDropDown.vue
interactwel/src/components/dashboard/projects/wizard/: Actions.vue  Actors.vue  Goals.vue  Plans.vue  Stresses.vue  (+1 more)
interactwel/src/store/: index.js
interactwel/static/: stream-temp-boxplot.json  stream-temperature-data.json  stream_temp.json
(+51 files in other folders)
