[metadata]
name = interactwel-django-app
version = 0.0.1
description = InterACTWEL plugin to Airavata Django Portal

[options]
packages = find:
# Include data files as specified in MANIFEST.in
include_package_data = True
install_requires =
    django >= 3.2
    airavata-django-portal-sdk
    django-filter>=2.1.0, <3.0
    markdown
    jsonfield

[options.entry_points]
airavata.djangoapp =
    interactwel = interactwel.apps:InteractwelAppConfig
